// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--split"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`image-text.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--split t-size-s"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`multiline.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--split"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div
      class="t-list__load t-list__load--loading"
    >
      <div>
        <div
          class="t-loading t-size-m"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
        </div>
        <span>
          正在加载中，请稍等
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--split"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`scroll.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--split t-size-s"
    style="height: 150px; overflow: auto;"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item__body tdesign-demo-item__body--list"
  >
    <h4>
      尺寸-小
    </h4>
    <div
      class="t-list t-list--split t-size-s"
    >
      <ul
        class="t-list-items"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
    <h4
      style="margin-top: 32px;"
    >
      尺寸-中（默认）
    </h4>
    <div
      class="t-list t-list--split"
    >
      <ul
        class="t-list-items"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
    <h4
      style="margin-top: 32px;"
    >
      尺寸-大
    </h4>
    <div
      class="t-list t-list--split t-size-l"
    >
      <ul
        class="t-list-items"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stripe.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--stripe"
  >
    <ul
      class="t-list-items"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
